--- a/src/components/Cockpit/Cockpit.css
+++ b/src/components/Cockpit/Cockpit.css
@@ -1,11 +1,7 @@
-.Cockpit {
-    height: 100%;
-}
-
 .counter {
     display: flex;
     justify-content: space-between;
-    margin: 8px auto;
+    margin: 8px 0;
     width: 264px;
 }
 
@@ -13,3 +9,9 @@ p {
   font-weight: bold;
   font-size: 18px;
 } 
+
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
