--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  height: 100%;
 }
